fixed layout bug on homepage

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -59,8 +59,6 @@ html { height: 100%;}
     }
     img {
       width: 100%;
-      // negative margin-top fixes alignment with text for desktop view
-      margin-top: -12%;
       position: relative;
     }
     i {
